优化安全证书加载

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ sslserver:
   port: 443
   keyStore: .keystore
   keyStorePassword: changeit
-  keyAlias: tomcat
+  keyStoreType: JKS
 
 # Spring配置
 spring:
