--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,13 @@
             <artifactId>protostuff-runtime</artifactId>
             <version>1.5.5</version>
         </dependency>
+
+        <!-- GSON工具 -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.1</version>
+        </dependency>
     </dependencies>
 
     <build>
