--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,9 +25,9 @@ spring:
     dateFormat: yyyy-MM-dd HH:mm:ss
   datasource: # 数据库配置
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/service?useUnicode=true
-    username: service
-    password: service
+    url: jdbc:mysql://localhost:3306/faster?useUnicode=true
+    username: faster
+    password: faster
 
 # Security配置
 security:
