--- a/faster/pom.xml
+++ b/faster/pom.xml
@@ -12,6 +12,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
