--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <packaging>pom</packaging>
 
     <properties>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
