--- a/query/pom.xml
+++ b/query/pom.xml
@@ -68,6 +68,10 @@
             <artifactId>querydsl-maven-plugin</artifactId>
             <version>4.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
 
         <!-- Spring 数据库支持 -->
         <dependency>
