--- a/common/pom.xml
+++ b/common/pom.xml
@@ -109,7 +109,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
-            <version>1.1.2-beta5</version>
+            <version>2.0.5</version>
         </dependency>
 
         <dependency>
