--- a/faster/pom.xml
+++ b/faster/pom.xml
@@ -166,5 +166,10 @@
             <artifactId>swagger-bootstrap-ui</artifactId>
             <version>1.9.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>2.4.12</version>
+        </dependency>
     </dependencies>
 </project>
