--- a/faster/pom.xml
+++ b/faster/pom.xml
@@ -163,8 +163,8 @@
         </dependency>
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
-            <artifactId>swagger-bootstrap-ui</artifactId>
-            <version>1.9.5</version>
+            <artifactId>knife4j-spring-ui</artifactId>
+            <version>2.0.3</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
